added vectors and updated the footers

--- a/index.html
+++ b/index.html
@@ -67,56 +67,123 @@
         />
       </section>
       <section id="style-container">
-        <div class="style-items">1</div>
-        <div class="style-items">2</div>
-        <div class="style-items">3</div>
-        <div class="style-items">4</div>
-        <div class="style-items">5</div>
-        <div class="style-items">6</div>
+        <div class="style-items" id="style-div1">
+          <img src="images/contact.svg" alt="" />
+          <div class="small--div">
+            <h5>Manage your account</h5>
+            <p>
+              Configure your settings, such as your email,profile details and
+              passwords
+            </p>
+            <a href=""
+              >Learn more<i class="fa-solid fa-arrow-right-long"></i
+            ></a>
+          </div>
+        </div>
+        <div class="style-items" id="style-div2">
+          <img src="images/dollar.svg" alt="" />
+          <div class="small--div">
+            <h5>Manage billing</h5>
+            <p>Change subsciptions and payment details.</p>
+            <a href=""
+              >Learn more<i class="fa-solid fa-arrow-right-long"></i
+            ></a>
+          </div>
+        </div>
+        <div class="style-items" id="style-div3">
+          <img src="images/keys.svg" alt="" />
+          <div class="small--div">
+            <h5>Authenticate to Bergen</h5>
+            <p>Set up and configure SSO,SCIM, and just-in-time provisioning.</p>
+            <a href=""
+              >Learn more<i class="fa-solid fa-arrow-right-long"></i
+            ></a>
+          </div>
+        </div>
+        <div class="style-items" id="style-div4">
+          <img src="images/message.svg" alt="" />
+          <div class="small--div">
+            <h5>Support</h5>
+            <p>Seak with one of our representatives.</p>
+            <a href=""
+              >Learn more<i class="fa-solid fa-arrow-right-long"></i
+            ></a>
+          </div>
+        </div>
+        <div class="style-items" id="style-div5">
+          <img src="images/pullrequest.svg" alt="" />
+          <div class="small--div">
+            <h5>Branches</h5>
+            <p>
+              Bergen Branches lets you manage,version and document your design
+              in one place.
+            </p>
+            <a href=""
+              >Learn more<i class="fa-solid fa-arrow-right-long"></i
+            ></a>
+          </div>
+        </div>
+        <div class="style-items" id="style-div6">
+          <img src="images/jigsaw.svg" alt="" />
+          <div class="small--div">
+            <h5>Manage organisations,teams and projects.</h5>
+            <p>
+              Use Bergen organisations,teams and projects to organize your
+              people and your work.
+            </p>
+            <a href=""
+              >Learn more<i class="fa-solid fa-arrow-right-long"></i
+            ></a>
+          </div>
+        </div>
       </section>
     </main>
     <footer>
-      <div class="footer__div">
-        <h4>Bergen</h4>
-        <ul>
-          <li>Branches</li>
-        </ul>
-      </div>
-      <div class="footer__div">
-        <h4>Resources</h4>
-        <ul>
-          <li>Blog</li>
-          <li>Help center</li>
-          <li>Release notes</li>
-          <li>Status</li>
-        </ul>
-      </div>
-      <div class="footer__div">
-        <h4>Community</h4>
-        <ul>
-          <li>X</li>
-          <li>Linkedin</li>
-          <li>Facebook</li>
-          <li>Instagram</li>
-          <li>Drible</li>
-          <li>Podcast</li>
-        </ul>
-      </div>
-      <div class="footer__div">
-        <h4>Company</h4>
-        <ul>
-          <li>About us</li>
-          <li>Careers</li>
-          <li>Legal</li>
-          <h6>contact uss</h6>
-          <li>Info@bergen.gmail.com</li>
-        </ul>
-      </div>
-      <div class="footer__div">
-        <h4>&copy;2024 Bergen</h4>
-        <p>Bergen studios and design,Inc.</p>
-        <p>All rights reserved.</p>
-      </div>
+      <section>
+        <div class="footer__div">
+          <h3>Bergen</h3>
+          <ul>
+            <li>Branches</li>
+          </ul>
+        </div>
+        <div class="footer__div">
+          <h3>Resources</h3>
+          <ul>
+            <li>Blog</li>
+            <li>Help center</li>
+            <li>Release notes</li>
+            <li>Status</li>
+          </ul>
+        </div>
+        <div class="footer__div">
+          <h3>Community</h3>
+          <ul>
+            <li>X</li>
+            <li>Linkedin</li>
+            <li>Facebook</li>
+            <li>Instagram</li>
+            <li>Drible</li>
+            <li>Podcast</li>
+          </ul>
+        </div>
+        <div class="footer__div">
+          <h3>Company</h3>
+          <ul>
+            <li>About us</li>
+            <li>Careers</li>
+            <li>Legal</li>
+            <h6>contact us</h6>
+            <li>Info@bergen.gmail.com</li>
+          </ul>
+        </div>
+        <div class="footer__div">
+          <h3>&copy;2024 Bergen</h3>
+          <p>Bergen studios and design,Inc.</p>
+          <p>All rights reserved.</p>
+        </div>
+      </section>
+      <h4 class="center">made with love in Nigeria</h4>
+      <h4 class="center">Guardianprime</h4>
     </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
