added some polishing.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <title>Bergen</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-primary">
+    <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
         <a class="navbar-brand ms-2" href="#">
           <img
@@ -29,7 +29,7 @@
             alt="Logo"
             width="30"
             height="24"
-            class="d-inline-block align-text-center"
+            class="d-inline-block align-text-center white"
           />
           Bergen
         </a>
@@ -47,10 +47,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav d-flex-row justify-content-around">
             <li class="nav-item rounded">
-              <a class="nav-link" href="#">Submit a request</a>
+              <a class="nav-link white" href="#">Submit a request</a>
             </li>
             <li class="nav-item rounded">
-              <a class="nav-link" href="#">Sign in</a>
+              <a class="nav-link white" href="#">Sign in</a>
             </li>
           </ul>
         </div>
@@ -58,7 +58,7 @@
     </nav>
     <main class="container-fluid">
       <section class="container">
-        <h2 class="text-center">How can we help?</h2>
+        <h2 class="text-center my-5">How can we help?</h2>
         <input
           class="form-control"
           type="search"
@@ -126,7 +126,7 @@
         <div class="style-items" id="style-div6">
           <img src="images/jigsaw.svg" alt="" />
           <div class="small--div">
-            <h5>Manage organisations,teams and projects.</h5>
+            <h5>Manage organisations</h5>
             <p>
               Use Bergen organisations,teams and projects to organize your
               people and your work.
@@ -182,7 +182,7 @@
           <p>All rights reserved.</p>
         </div>
       </section>
-      <h4 class="center">made with love in Nigeria</h4>
+      <h4 class="center">Made with ❤️ in Nigeria</h4>
       <h4 class="center">Guardianprime</h4>
     </footer>
     <script
